@@ -1,0 +1,8 @@
+	processor 18f4455
+
+#include "empty_macro.inc"
+
+	EMPTY
+	goto	$
+
+	end
